--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start:json-server": "json-server --watch ./src/assets/data/db.json --port 3001"
   },
   "dependencies": {
+    "json-server": "^1.0.0-beta.2",
     "pinia": "^2.2.2",
     "vue": "^3.4.37",
     "vue-router": "^4.4.5"
